코드 조금 청소하기